--- a/Acerca_Del_Pez_Loro/index.html
+++ b/Acerca_Del_Pez_Loro/index.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="../CSS/style.css">
+        <link rel="stylesheet" href="/Acerca_Del_Pez_Loro/CSS/style.css">
         <title>Pez Loro</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" />
     </head>
@@ -43,7 +43,7 @@
 
                     <h2 class="distanciadoh2">Historia</h2>
                     <div class="pruebaSSS">
-                        <img src="../CSS/img/loroPez.webp" alt="Familia" class="loro" />
+                        <img src="./CSS/img/loroPez.webp" alt="Familia" class="loro" />
 
                         <div>
 
@@ -77,12 +77,12 @@
                                 ciclo de vida, como veremos más adelante.
                             </p>
                         </div>
-                        <img src="../CSS/img/loroPez2.webp" alt="Características del Pez Loro" class="loro" />
+                        <img src="./CSS/img/loroPez2.webp" alt="Características del Pez Loro" class="loro" />
                     </div>
 
                     <h2 class="distanciadoh2" id="elemento3">Importancia</h2>
                     <div class="pruebaSSS">
-                        <img src="../CSS/img/pezLoro3.jpg" alt="Importancia del Pez Loro" class="loro" />
+                        <img src="./CSS/img/pezLoro3.jpg" alt="Importancia del Pez Loro" class="loro" />
                         <div>
                             <p>
                                 Es un animal marino de gran importancia ecológica que ayuda a mantener el equilibrio de los
@@ -110,7 +110,7 @@
                                 coral, protegen los corales y, sobre todo, aportan la arena blanca de las playas.
                             </p>
                         </div>
-                        <img src="../CSS/img/dejarDeConsumirlo.jpg" alt="Dejar de consumir Pez Loro" class="loro" />
+                        <img src="./CSS/img/dejarDeConsumirlo.jpg" alt="Dejar de consumir Pez Loro" class="loro" />
                     </div>
                 </div>
             </article>
@@ -126,7 +126,7 @@
                             <div class="row">
                                 <div class="col-md-4">
                                     <div class="card">
-                                        <img src="../CSS/img/pezGato.jpg" class="card-img-top" alt="Imagen 1"
+                                        <img src="./CSS/img/pezGato.jpg" class="card-img-top" alt="Imagen 1"
                                             data-bs-toggle="modal" data-bs-target="#modalImagen"
                                             onclick="mostrarModal('CSS/img/pezGato2.jpeg', 'Descubre más sobre este depredador', 'El pez gato es un pez de cuerpo alargado, sin escamas, con barbillas alrededor de la boca. Habita en ríos y lagos, y se encuentra en todo el mundo. Se reproduce mediante la puesta de huevos que son fertilizados externamente, y los alevines nacen listos para nadar. ')">
                                         <div class="card-body">
@@ -136,7 +136,7 @@
                                 </div>
                                 <div class="col-md-4">
                                     <div class="card">
-                                        <img src="../CSS/img/pezLeon.jpeg" class="card-img-top" alt="Imagen 2"
+                                        <img src="./CSS/img/pezLeon.jpeg" class="card-img-top" alt="Imagen 2"
                                             data-bs-toggle="modal" data-bs-target="#modalImagen"
                                             onclick="mostrarModal('CSS/img/pezLeon.jpeg', 'Descubre más sobre este depredador', 'El pez león es un pez tropical con una melena de espinas venenosas en su cabeza y aletas. Habita en arrecifes de coral y es conocido por su aspecto colorido y su agresividad. Se reproduce poniendo huevos que fertiliza externamente, formando grandes nubes de huevos en el agua.')">
                                         <div class="card-body">
@@ -146,7 +146,7 @@
                                 </div>
                                 <div class="col-md-4">
                                     <div class="card">
-                                        <img src="../CSS/img/anguilaMorena.jpg" class="card-img-top" alt="Imagen 3"
+                                        <img src="./CSS/img/anguilaMorena.jpg" class="card-img-top" alt="Imagen 3"
                                             data-bs-toggle="modal" data-bs-target="#modalImagen"
                                             onclick="mostrarModal('CSS/img/anguilaMorena.jpg', 'Descubre más sobre este depredador', 'Es un pez marino de cuerpo alargado y sin escamas, con piel gruesa y lisa. Habita en arrecifes y grietas rocosas, donde se esconde durante el día y caza de noche. Tiene una mordida fuerte con dientes afilados y una apariencia similar a la de una serpiente.')" />
                                         <div class="card-body">
@@ -159,7 +159,7 @@
                             <div class="row">
                                 <div class="col-md-4">
                                     <div class="card">
-                                        <img src="../CSS/img/humanosPesca.jpg" class="card-img-top" alt="Imagen 1"
+                                        <img src="./CSS/img/humanosPesca.jpg" class="card-img-top" alt="Imagen 1"
                                             data-bs-toggle="modal" data-bs-target="#modalImagen"
                                             onclick="mostrarModal('CSS/img/humanosPesca.jpg', 'Descubre más sobre estos depredadores', 'Curiosamente estos depredadores somos nosotros mismos, con la práctica de la pezca y el consumo de estos peces estamos poniendo en riesgo lo que son nuestras mismas playas que en el caso de R.D es uno de sus atractivos turísticos que más apoya a la economía.')">
                                         <div class="card-body">
@@ -169,7 +169,7 @@
                                 </div>
                                 <div class="col-md-4">
                                     <div class="card">
-                                        <img src="../CSS/img/tiburon.jpg" class="card-img-top" alt="Imagen 2"
+                                        <img src="./CSS/img/tiburon.jpg" class="card-img-top" alt="Imagen 2"
                                             data-bs-toggle="modal" data-bs-target="#modalImagen"
                                             onclick="mostrarModal('CSS/img/tiburon.jpg', 'Descubre más sobre este depredador', 'Es un pez cartilaginoso con un cuerpo hidrodinámico diseñado para la velocidad y la caza. Posee varias hileras de dientes reemplazables, gran sentido del olfato y electroreceptores para detectar presas. Existen diversas especies, desde el pequeño tiburón linterna hasta el imponente tiburón blanco.')">
                                         <div class="card-body">
@@ -179,7 +179,7 @@
                                 </div>
                                 <div class="col-md-4">
                                     <div class="card">
-                                        <img src="../CSS/img/pezMero.jpeg" class="card-img-top" alt="Imagen 3"
+                                        <img src="./CSS/img/pezMero.jpeg" class="card-img-top" alt="Imagen 3"
                                             data-bs-toggle="modal" data-bs-target="#modalImagen"
                                             onclick="mostrarModal('CSS/img/pezMero.jpeg', 'Descubre más sobre este depredador', 'Es un pez de cuerpo robusto y boca grande que habita en arrecifes de coral y zonas rocosas. Es un depredador solitario que se alimenta de peces y crustáceos. Algunas especies pueden cambiar de sexo a lo largo de su vida. Son muy apreciados en la pesca comercial y deportiva.')" />
                                         <div class="card-body">
@@ -220,7 +220,7 @@
                             huevos que son fertilizados externamente, y los alevines nacen listos para nadar.</p>
                     </div>
                     <div class="losDepredadores2">
-                        <img src="../CSS/img/pezGato2.jpeg" alt="Pez Gato">
+                        <img src="./CSS/img/pezGato2.jpeg" alt="Pez Gato">
                         <h2>Pez Gato</h2>
                         <p>El pez león es un pez tropical con una melena de espinas venenosas en su cabeza y aletas.
                             Habita en arrecifes de coral y es conocido por su aspecto colorido y su agresividad. Se
@@ -228,7 +228,7 @@
                             agua.</p>
                     </div>
                     <div class="losDepredadores2">
-                        <img src="../CSS/img/beneficios.jpg" alt="Beneficios">
+                        <img src="./CSS/img/beneficios.jpg" alt="Beneficios">
                         <h2>Beneficios de consumir estos peces </h2>
                         <p>El pez gato es rico en proteínas y bajo en grasas, mientras que el pez león es bajo en
                             calorías y nutritivo. Consumir ambos ayuda a obtener beneficios nutricionales y a controlar
@@ -236,7 +236,7 @@
                             preparación adecuada y sostenibilidad.</p>
                     </div>
                     <div class="losDepredadores2">
-                        <img src="../CSS/img/consumirDepredadores.jpeg" alt="Consumir Depredadores">
+                        <img src="./CSS/img/consumirDepredadores.jpeg" alt="Consumir Depredadores">
                         <h2>¿Cómo ayudamos al planeta al consumir estos depredadores?</h2>
                         <p>Consumir depredadores del pez loro, como el pez león, ayuda al planeta al controlar sus
                             poblaciones, lo que mantiene el equilibrio ecológico en los arrecifes de coral y otros
@@ -251,7 +251,7 @@
             <h2 class="distanciadoh2">¿Somos depredadores del pez loro?</h2>
             <div class="pruebaSSS">
 
-                <img src="../CSS/img/dejarDeConsumirlo.jpg" alt="Familia" class="loro" />
+                <img src="./CSS/img/dejarDeConsumirlo.jpg" alt="Familia" class="loro" />
                 <div>
                     <p> Sí, los seres humanos son depredadores del pez loro al consumirlo a través de la pesca. Sin
                         embargo, esta actividad puede impactar significativamente el ecosistema, por lo que es crucial
@@ -277,8 +277,8 @@
                 <div>
                     <h3>Prueba tu habilidad</h3>
                     <h4>en estos juegos</h4>
-                    <a href="../Html/Salva-al-pez-loro.html" target="_blank"><button>Salva al pez loro</button></a>
-                    <a href="../Html/Juego-de-memoria.html" target="_blank"><button>Prueba la capacidad de tu memoria</button></a>
+                    <a href="./Html/Salva-al-pez-loro.html" target="_blank"><button>Salva al pez loro</button></a>
+                    <a href="./Html/Juego-de-memoria.html" target="_blank"><button>Prueba la capacidad de tu memoria</button></a>
                     <!--Aca ira tu url del juego, recuerda borrarlo despues de editarlo-->
                     <a href="../Html/PezcaInvasor.Html" target="_blank"><button>Pezca a los depredadores del pez loro</button></a>
                 </div>
