--- a/Acerca_Del_Pez_Loro/Html/Juego-de-memoria.html
+++ b/Acerca_Del_Pez_Loro/Html/Juego-de-memoria.html
@@ -10,7 +10,7 @@
 <body>
     <div class="game">
         <div class="controls">
-            <a href="../Html/index.html">
+            <a href="/Acerca_Del_Pez_Loro/index.html">
 
                 <button>Volver</button>
             </a>
