--- a/Acerca_Del_Pez_Loro/index.html
+++ b/Acerca_Del_Pez_Loro/index.html
@@ -280,7 +280,7 @@
                     <a href="./Html/Salva-al-pez-loro.html" target="_blank"><button>Salva al pez loro</button></a>
                     <a href="./Html/Juego-de-memoria.html" target="_blank"><button>Prueba la capacidad de tu memoria</button></a>
                     <!--Aca ira tu url del juego, recuerda borrarlo despues de editarlo-->
-                    <a href="../Html/PezcaInvasor.Html" target="_blank"><button>Pezca a los depredadores del pez loro</button></a>
+                    <a href="./Html/PezcaInvasor.Html" target="_blank"><button>Pezca a los depredadores del pez loro</button></a>
                 </div>
             </footer>
             
